# agentic-alz

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CODEOWNERS  LICENSE  README.md  ROADMAP.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.squad/: ceremonies.md  decisions.md  routing.md  team.md
bootstrap/: README.md  phase1.sh
docs/: adr-template.md  consensus-plan.md  copilot-developer-setup.md  deploy-readiness.md  eventual-consistency.md  incident-response.md  lab-mode.md  local-dev.md  mcp.allowlist.yaml  models.allowlist.yaml  multi-model-judge.md  phase-0-prerequisites.md  rubberduck.md  runbook.md  squad-coordination.md  squad.md  (+1 more)
orchestrator/: README.md  pyproject.toml
orchestrator/agentic_alz/: __init__.py  budget.py  checkpoint.py  cli.py  hashing.py  killswitch.py  logging.py  schema.py
orchestrator/agentic_alz/llm/: __init__.py  guard.py  judge.py  models.py
orchestrator/agentic_alz/mcp/: __init__.py
orchestrator/agentic_alz/operate/: __init__.py  drift_cooldown.py
orchestrator/agentic_alz/stages/: generate.py  interview.py  risk.py
orchestrator/agentic_alz/terraform/: __init__.py  wrapper.py
orchestrator/tests/: conftest.py  test_cli.py  test_decision_schema.py  test_drift_cooldown.py  test_generate.py  test_interview.py  test_judge.py  test_killswitch_and_budget.py  test_lab.py  test_llm_guard.py  test_mcp_allowlist.py  test_models_allowlist.py  test_playbooks.py  test_rcg_schema.py  test_risk.py  test_schema.py  test_squad_bootstrap.py  test_terraform_wrapper.py
orchestrator/tests/data/: plan.sample.json
(+133 files in other folders)
